--- a/src/app/components/loans/housing-loan/housing-loan.component.html
+++ b/src/app/components/loans/housing-loan/housing-loan.component.html
@@ -1,18 +1,54 @@
-<div>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" (input)="validateChange()">
-      <label for="amount">Amount in EUR (1 - 1000000)</label>
-      <input type="number" formControlName="amount">
-      <p *ngIf="amountWrongFormat" class="error-message">Value should contain only numbers</p>
-      <p *ngIf="amountTooBig" class="error-message">Value should be less than 1000000</p>
-      <p *ngIf="amountTooSmall" class="error-message">Value should be more than 0</p>
-  
-      <label for="years">Payback time in years (1 - 60)</label>
-      <input type="number" formControlName="years">
-      <p *ngIf="yearsWrongFormat" class="error-message">Value should contain only numbers</p>
-      <p *ngIf="yearsTooBig" class="error-message">Value should be less than 60</p>
-      <p *ngIf="yearsTooSmall" class="error-message">Value should be more than 0</p>
+<div class="form">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" (input)="validateChange()">
+    <label for="amount">Amount in EUR (1 - 1000000)</label>
+    <input type="number" formControlName="amount">
+    <p *ngIf="amountWrongFormat" class="error-message">Value should contain only numbers</p>
+    <p *ngIf="amountTooBig" class="error-message">Value should be lesser than 1000000</p>
+    <p *ngIf="amountTooSmall" class="error-message">Value should be greater than 0</p>
 
-      <p *ngIf="formInvalid" class="error-message">Form contains errors</p>
-      <input type="submit" value="Submit">
-    </form>
+    <label for="years">Payback time in years (1 - 60)</label>
+    <input type="number" formControlName="years">
+    <p *ngIf="yearsWrongFormat" class="error-message">Value should contain only numbers</p>
+    <p *ngIf="yearsTooBig" class="error-message">Value should be lesser than 60</p>
+    <p *ngIf="yearsTooSmall" class="error-message">Value should be greater than 0</p>
+
+    <p *ngIf="formInvalid" class="error-message">Form contains errors</p>
+    <input type="submit" value="Submit">
+  </form>
+</div>
+
+<div *ngIf="housingLoan !== undefined">
+  <div *ngIf="housingLoan.errorMessage === null">
+    <h3 class="p-3 text-center">Payment details for each month</h3>
+      <div class="container">
+          <table class="table table-striped table-bordered">
+              <thead>
+                  <tr>
+                      <th>Month</th>
+                      <th>Total payment (EUR)</th>
+                      <th>Percentage payment (EUR)</th>
+                      <th>Loan payment (EUR)</th>
+                  </tr>
+              </thead>
+              <tbody>
+                <tr >
+                  <td>Overall</td>
+                  <td>{{ housingLoan.housingLoanPayment.totalPayment | number : '1.2-2' }}</td>
+                  <td>{{ housingLoan.housingLoanPayment.percentagePayment | number : '1.2-2' }}</td>
+                  <td>{{ housingLoan.housingLoanPayment.loanPayment | number : '1.2-2' }}</td>
+                </tr>
+                  <tr *ngFor="let payment of housingLoan.housingLoanPayment.housingLoanMonthlyPayments">
+                    <td>{{ payment.month }}</td>
+                    <td>{{ payment.totalPayment | number : '1.2-2' }}</td>
+                    <td>{{ payment.percentagePayment | number : '1.2-2' }}</td>
+                    <td>{{ payment.loanPayment | number : '1.2-2' }}</td>
+                  </tr>
+              </tbody>
+          </table>
+      </div>
   </div>
+  <div *ngIf="housingLoan.errorMessage !== null">
+    <p class="error-message">{{ housingLoan.errorMessage }}</p>
+  </div>
+
+</div>
